--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,17 @@
-/*.footer {
-    margin-top: 20px;
-    padding: 20px;
-    background: #333;
+
+  .footer-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: #64202a; /* Dark Red */
     color: white;
-    text-align: center;
-  }
-  
-  .footer-icons span {
-    margin: 10px;
+    border-radius: 50%;
     font-size: 24px;
-  }*/
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .footer-icon:hover {
+    transform: scale(1.1);
+  }
